--- a/PinkyMwol/Dockerfile
+++ b/PinkyMwol/Dockerfile
@@ -1,9 +1,9 @@
 FROM quay.io/lyfe00011/test:beta
 
-RUN git clone https://github.com/afnanplk/Pinky /root/WhatsAsenaDuplicated
+RUN git clone https://github.com/HMser/Pinky /root/WhatsAsenaDuplicated
 WORKDIR /root/WhatsAsenaDuplicated/
 RUN yarn install --no-audit
-RUN git clone https://github.com/afnanplk/uploads
+RUN git clone https://github.com/HMser/uploads
 RUN cp -R /root/Utils/* /root/WhatsAsenaDuplicated 
 RUN npm install supervisor -g
 CMD ["node", "bot.js"]
