--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "Liza Mwol - re-edited from asena. World’s first UserBot made for WhatsApp.",
     "logo": "https://i.imgur.com/qm8nBAi.jpeg",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
-    "repository": "https://github.com/afnanplk/Pinky_V2",
+    "repository": "https://github.com/HMser/Queen-Liza",
     "website":   "under maintenance",
     "success_url": "under maintenance",
     "stack": "container",
