--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "LIZA MWOL BY HM",
-    "description": "Liza Mwol - re-edited from asena. World’s first UserBot made for WhatsApp.",
+    "name": "Qᴜᴇᴇɴ Lɪᴢᴀ BY HM",
+    "description": "Qᴜᴇᴇɴ Lɪᴢᴀ - re-edited from asena. World’s first UserBot made for WhatsApp.",
     "logo": "https://i.ibb.co/cvyPtps/QL.jpg",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/HMser/Queen-Liza",
