--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "𝙑𝙄𝙋𝙀𝙍 𝘽𝙊𝙏 𝘽𝙔 𝘼𝘿𝘼𝙍𝙎𝙃",
     "description": " - rꪶ͢ɪͥᴛͭsᷤ ͢ᴍͫᴇͤᡃ⃝ᴠɪᴘᴇʀe-edited from asena. World’s first UserBot made for WhatsApp.",
-    "logo": "https://i.ibb.co/cvyPtps/QL.jpg",
+    "logo": "https://i.imgur.com/GGOuaJU.jpeg",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/Viper161704/Viper-Bot",
     "website":   "under maintenance",
