--- a/app.json
+++ b/app.json
@@ -63,7 +63,7 @@
         "OWNER_NAME": {
             "description": "reply for .owner ! give your details, Use => default, to change back.",
             "required": false,
-            "value": "HM Ser"
+            "value": "VIPER Ser"
         },    
         "HANDLERS": {
             "description": "Komutlar için. For commands.",
