--- a/PinkyMwol/Dockerfile
+++ b/PinkyMwol/Dockerfile
@@ -3,8 +3,8 @@ FROM quay.io/lyfe00011/test:beta
 RUN git clone https://github.com/Viper161704/Viper-Bot /root/WhatsAsenaDuplicated
 WORKDIR /root/WhatsAsenaDuplicated/
 RUN yarn install --no-audit
-RUN git clone https://github.com/HMser/uploads
-RUN git clone https://github.com/HMser/Media-1
+RUN git clone https://github.com/Viper161704/uploads
+RUN git clone https://github.com/Viper161704/Media-1
 RUN cp -R /root/Utils/* /root/WhatsAsenaDuplicated 
 RUN npm install supervisor -g
 CMD ["node", "bot.js"]
